# trade-xquant

./: .gitignore  README.md  config.example.yaml  hello.py  pyproject.toml
docs/: 01-system-architecture.md  02-qmt-miniqmt-setup-and-validation.md  03-configuration.md  04-xquant-api-contract.md  05-qmt-runtime-notes.md  06-order-generation-algorithm.md  07-conditional-stop-take-profit-rules.md  07-daemon-order-lifecycle.md  08-conditional-stop-take-profit-rules.md  08-local-condition-orders.md  09-operations.md  10-order-generation-algorithm.md  architecture.md  conditional-stop-take-profit-rules.md  configuration.md  daemon-order-lifecycle.md  detailed-design.md  local-condition-orders.md  operations.md  xquant-api-contract.md
tests/: test_auth.py  test_cli_account.py  test_cli_doctor.py  test_cli_login.py  test_cli_mock_run.py  test_condition_indicators.py  test_condition_orders.py  test_condition_rule_schema.py  test_formal_task_flow.py  test_gateway_condition_orders.py  test_gateway_mock_broker.py  test_local_task_file_adapter.py  test_logging_config.py  test_mock_qmt_adapter.py  test_portfolio_engine.py  test_qmt_adapter.py  test_real_order_gate.py  test_risk_control.py  test_storage.py  test_sync_results.py  test_trading_calendar.py  test_xquant_adapter.py
trade_xquant/: __init__.py  auth.py  broker.py  cli.py  condition_indicators.py  condition_orders.py  config.py  daemon.py  execution_engine.py  heartbeat.py  local_task_file.py  logging_config.py  mock_qmt_adapter.py  models.py  portfolio_engine.py  qmt_adapter.py  risk_control.py  storage.py  (+2 more)
(+6 files in other folders)
